--- a/index.html
+++ b/index.html
@@ -5,8 +5,47 @@
     <title>HTML Academy: Девайс</title>
   </head>
   <body>
+    <header class="page-header">
+      <nav class="navigation">
+        <ul class="navigation-user">
+          <li class="search-input">
+            <input type="text">
+          </li>
+          <li class="search-button" >
+            <button>Найти</button>
+          </li>
+          <li class="login">
+            <button>Войти</button>
+          </li>
+          <li class="compare">
+            <button>Сравнить</button>
+          </li>
+          <li class="cart">
+            <button>Корзина</button>
+          </li>
+         </ul>
+         <ul class="navigation-main">
+        <a class="navigation-product" href="#" >Каталог товаров</a>
+        <ul class="sub-menu">
+          <li><a href="#1">Виртуальная реальность</a></li>
+          <li><a href="#2">Моноподы для селфи</a></li>
+          <li><a href="#3">Экшен камеры</a></li>
+          <li><a href="#4">Фитнес-браслеты</a></li>
+          <li><a href="#5">Умные часы</a></li>
+          <li><a href="#6">Квадрокоптеры</a></li>
+        </ul>
+        <ul class="menu">
+          <li><li><a href="#1">Доставка</a></li></li>
+          <li><li><a href="#2">Гарантия</a></li></li>
+          <li><li><a href="#3">Контакты</a></li></li>
+        </ul>
+        </ul>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+
+     </nav>
+    </header>
+
+
 
   </body>
 </html>
