--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <header class="page-header">
+      <h1 class="visually-hidden">Интернет-магазин гаджетов "DEVICE"</h1>
       <nav class="navigation">
         <ul class="navigation-user">
           <li class="search-input">
@@ -23,9 +24,9 @@
           <li class="cart">
             <button>Корзина</button>
           </li>
-         </ul>
-         <ul class="navigation-main">
-        <a class="navigation-product" href="#" >Каталог товаров</a>
+        </ul>
+        <ul class="navigation-main">
+          <a class="navigation-product" href="#" >Каталог товаров</a>
         <ul class="sub-menu">
           <li><a href="#1">Виртуальная реальность</a></li>
           <li><a href="#2">Моноподы для селфи</a></li>
@@ -35,17 +36,151 @@
           <li><a href="#6">Квадрокоптеры</a></li>
         </ul>
         <ul class="menu">
-          <li><li><a href="#1">Доставка</a></li></li>
-          <li><li><a href="#2">Гарантия</a></li></li>
-          <li><li><a href="#3">Контакты</a></li></li>
+          <li><a href="#1">Доставка</a></li>
+          <li><a href="#2">Гарантия</a></li>
+          <li><a href="#3">Контакты</a></li>
         </ul>
         </ul>
-
-
-     </nav>
+      </nav>
     </header>
+    <main class="main-index">
+      <section>
+        <h2 class="visually-hidden">Промо-слайдер</h2>
+        <div class="slider">
+          <img src=""/>
+          <img src=""/>
+          <img src=""/>
+        </div>
+        <div class="slider-text">
+          <p>Порхает как бабочка,
+          жалит как пчела!</p>
+          <p>Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
+          <button class="detailed">ПОДРОБНЕЕ</button>
+          <p>800 м Дальность полета</p>
+          <p>50 м Радиус поражения</p>
+        </div>
+      </section>
+      <section class="category">
+        <h2 class="visually-hidden">Категории товаров</h2>
+        <ul>
+          <li>
+            <img src="">
+            <p>Виртуальная реальность</p>
+          </li>
+          <li>
+            <img src="">
+            <p>Моноподы для селфи</p>
+          </li>
+          <li>
+            <img src="">
+            <p>Экшн-камеры</p>
+          </li>
+          <li>
+            <img src="">
+            <p>Фитнес-браслеты</p>
+          </li>
+          <li>
+            <img src="">
+            <p>Умные часы</p>
+          </li>
+          <li>
+            <img src="">
+            <p>Квадрокоптеры</p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2 class="visually-hidden">Доставка Гарантия Кредит</h2>
+        <ul class="service-button">
+          <li>
+            <button class="delivery">Доставка</button>
+          </li>
+          <li>
+           <button class="warranty">Гарантия</button>
+          </li>
+          <li>
+            <button class="credit">Кредит</button>
+          </li>
+        </ul>
+        <ul class="service-info">
+          <li>
+            <h2>Доставка</h2>
+            Мы с удовольствием доставим ваш товар прямо
+            к вашему подъезду совершенно бесплатно! Ведь
+            мы неплохо заработаем, поднимая его на ваш этаж.
+          </li>
+          <li>
+            <h2>Гарантия</h2>
+            Если из-за возгорания купленного у нас товара у вас
+            сгорит дом — не переживайте, мы выдадим вам новый.
+            Товар, не дом, конечно же.
+          </li>
+          <li>
+            <h2>Кредит</h2>
+            Залезть в долговую яму стало проще!
+            Кредитные консультанты подберут для вас
+             наиболее выгодные условия кредита. Выгодные для банка, разумеется.
+          </li>
+        </ul>
+        <ul class="service-image">
+          <li><img src="#" alt=""> </li>
+          <li><img src="#" alt=""> </li>
+          <li><img src="#" alt=""> </li>
+        </ul>
+      </section>
+      <section>
+        <div class="delivery-order">
+          <img src="#" alt="">
+          <p>Доставим редкий товар под заказ</p>
+          <button></button>
+        </div>
+        <div class="about-us">
+          <h2>О нас</h2>
+          <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+          <p>Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:</p>
+          <ul class="transport-company">
+            <li>
+              <p>Меловые линии</p>
+            </li>
+            <li>
+              <p>СДИК</p>
+            </li>
+            <li>
+              <p>ТоксБерри</p>
+            </li>
+          </ul>
+          <button>Подробнее о нас</button>
+        </div>
+        <div class="contacts">
+          <h2>Контакты</h2>
+          <p>Вы можете забрать товар сами, заехав в наш офис.
+            Заодно сможете проверить работоспособность покупки. </p>
+          <h3>Интернет-магазин «Девайс»</h3>
+          <p>Санкт-Петербург, набережная реки Карповки, 5, литера П. +7 (812) 812-12-12</p>
+          <h3>Время работы</h3>
+          <p>пн—пт: с 10:00 до 22:00 сб—вс: с 10:00 до 19:00</p>
+          <button>Напишите нам</button>
+        </div>
+        <div class="subscribe">
+          <h2>Подпишитесь на рассылку</h2>
+          <p>Еженедельный дайджест с обзорами новинок,
+            длительными тест-драйвами, распаковками,
+            а также акции, спецпредложения и вот это вот всё.</p>
+          <form method="post" action="https://echo.htmlacademy.ru/" name="subscribe">
+            <label for="e-mail">Ваш e-mail</label>
+            <input type="text" name="login" id="e-mail">
+            <input type="submit" value="Подписаться">
+          </form>
+          <p>
+            <input type="checkbox" checked> Это бесплатно
+          </p>
+        </div>
+      </section>
+      <footer>
+
+      </footer>
 
 
-
+    </main>
   </body>
 </html>
