--- a/index.html
+++ b/index.html
@@ -176,11 +176,33 @@
           </p>
         </div>
       </section>
-      <footer>
-
-      </footer>
-
-
     </main>
+      <footer>
+        <img src="#">
+        <div class="page-footer">
+          <ul>
+            <li>Санкт-Петербург, набережная
+              реки Карповки, 5, литера П.
+            </li>
+            <li>
+              <a href="">Доставка</a>
+            </li>
+            <li>
+              <a href="">Гарантия</a>
+            </li>
+            <li>
+              <a href="">Контакты</a>
+            </li>
+            <li>
+              Тел.: +7 (812) 812-12-12
+            </li>
+          </ul>
+          <p class="social-contacts"><a href=" https://t.me/htmlacademy"><img src="#" alt="Телеграм"></a></p>
+          <p class="social-contacts"><a href="https://www.youtube.com/user/htmlacademyru"><img src="#" alt="Ютуб"></a></p>
+          <p class="social-contacts"><a href="https://twitter.com/htmlacademy_ru"><img src="#" alt="Твиттер"></a></p>
+          <img src="#">
+          <img src="#">
+        </div>
+      </footer>
   </body>
 </html>
