--- a/catalog.html
+++ b/catalog.html
@@ -50,7 +50,19 @@
 
 </section>
   </main>
-
+    <h1></h1>
+    <div class=""></div>
+    <div class="">
+      <div class="container">
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+      </div>
+    </div>
 
 
   </body>
