--- a/catalog.html
+++ b/catalog.html
@@ -5,65 +5,153 @@
     <title>Страница каталога Device</title>
   </head>
   <body>
-    <header class="page-header">
-      <h1 class="visually-hidden">Интернет-магазин гаджетов "DEVICE"</h1>
-      <nav class="navigation">
-        <ul class="navigation-user">
-          <li class="search-input">
-            <input type="text">
-          </li>
-          <li class="search-button" >
-            <button>Найти</button>
-          </li>
-          <li class="login">
-            <button>Войти</button>
-          </li>
-          <li class="compare">
-            <button>Сравнить</button>
-          </li>
-          <li class="cart">
-            <button>Корзина</button>
-          </li>
-        </ul>
-        <ul class="navigation-main">
-          <a class="navigation-product" href="#" >Каталог товаров</a>
-        <ul class="sub-menu">
-          <li><a href="#1">Виртуальная реальность</a></li>
-          <li><a href="#2">Моноподы для селфи</a></li>
-          <li><a href="#3">Экшен камеры</a></li>
-          <li><a href="#4">Фитнес-браслеты</a></li>
-          <li><a href="#5">Умные часы</a></li>
-          <li><a href="#6">Квадрокоптеры</a></li>
-        </ul>
-        <ul class="menu">
-          <li><a href="#1">Доставка</a></li>
-          <li><a href="#2">Гарантия</a></li>
-          <li><a href="#3">Контакты</a></li>
-        </ul>
-        </ul>
-      </nav>
-    </header>
-
-  <main>
-<section>
-  <h2>Моноподы для селфи</h2>
-
-</section>
-  </main>
-    <h1></h1>
-    <div class=""></div>
-    <div class="">
-      <div class="container">
-        <ul>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-        </ul>
-      </div>
+    <div class="container">
+      <header class="page-header">
+        <div class="page-header__logo">
+          <a><img src="#" alt="DEVICE" width="" height=""></a>
+        </div>
+        <nav class="navigation">
+          <ul class="navigation-user">
+            <li class="navigation-user-search">
+              <form class="navigation-form" method="get" action="https://echo.htmlacademy.ru"></form>
+                <input class="navigation-form-input" id="search" type="search" name="search" placeholder="Поиск по сайту">
+                <button class="navigation-form-btn" type="submit">Найти</button>
+                <label class="navigation-form-label" for="search">
+                  <span class="visually-hidden">Поиск:</span>
+                </label>
+              </form>
+            </li>
+            <li class="navigation-login">
+              <a class="navigation-link-login" href="#">Войти</a>
+            </li>
+            <li class="navigation-compare">
+              <a class="navigation-link-compare" href="#">Сравнить</a>
+            </li>
+            <li class="navigation-cart">
+              <a class="navigation-link-cart" href="#">Корзина</a>
+            </li>
+          </ul>
+          <ul class="navigation-main">
+            <li class="navigation-main-catalog">
+              <a class="navigation-main-product" href="#" >Каталог товаров</a>
+              <div class="navigation-main-sub">
+                <ul class="sub-menu">
+                  <li  class="sub-menu-one">
+                    <a href="#">Виртуальная реальность</a>
+                    <a href="#">Моноподы для селфи</a>
+                    <a href="#">Экшен камеры</a>
+                  </li>
+                  <li class="sub-menu-two">
+                    <a href="#">Фитнес-браслеты</a>
+                    <a href="#">Умные часы</a>
+                  </li>
+                  <li class="sub-menu-three">
+                    <a href="#">Квадрокоптеры</a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li class="navigation-main-item-delivery">
+              <a href="#">Доставка</a>
+            </li>
+            <li class="navigation-main-item-warranty">
+              <a href="#">Гарантия</a>
+            </li>
+            <li class="navigation-main-item-contacts">
+              <a href="#">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+      </header>
     </div>
+    <main>
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    </main>
+      <footer class="page-footer">
+        <div class="page-footer-logo">
+          <a><img src="#" alt="DEVICE" width="" height=""></a>
+        </div>
+        <div class="page-footer-info">
+          <div class="page-footer-address">
+            <span>Санкт-Петербург, набережная реки Карповки, 5, литера П.</span>
+          </div>
+          <div class="page-footer-services">
+            <a class="page-footer-services-delivery" href="#">Доставка</a>
+            <a class="page-footer-services-warranty" href="#">Гарантия</a>
+            <a class="page-footer-services-contacts" href="#">Контакты</a>
+          </div>
+          <div class="page-footer-phone">
+            <a href="tel:+78128121212">Тел.: +7 (812) 812-12-12</a>
+          </div>
+        </div>
+        <div class="page-footer-links">
+          <div class="page-footer-links-social">
+            <ul class="page-footer-social-list">
+              <li class="page-footer-social-item">
+                <a class="page-footer-social-fb" href="#">
+                  <span class="visually-hidden">Facebook</span>
+                </a>
+              </li>
+              <li class="page-footer-social-item">
+                <a class="page-footer-social-inst" href="#">
+                  <span class="visually-hidden">Instagram</span>
+                </a>
+              </li>
+              <li class="page-footer-social-item">
+                <a class="page-footer-social-tw" href="#">
+                  <span class="visually-hidden">Twitter</span>
+                </a>
+              </li>
+            </ul>
+            <div class="page-footer-copyright">
+              <a href="#"><img src="#" alt="HTML Academy" width="" height=""></a>
+            </div>
+            <div class="rectangle">
+              <svg>
+                <rect width="80" height="7"/>
+              </svg>
+            </div>
+          </div>
+        </div>
+      </footer>
   </body>
 </html>
