--- a/index.html
+++ b/index.html
@@ -267,7 +267,9 @@
               <li class="contacts-four">
                 <b>Время работы</b><br>пн—пт: с 10:00 до 22:00<br>сб—вс: с 10:00 до 19:00
               </li>
-              <a class="btn" href="#">Напишите нам</a>
+              <li>
+                <a class="btn" href="#">Напишите нам</a>
+              </li>
             </ul>
           </div>
         </div>
@@ -282,7 +284,7 @@
               <p>Еженедельный дайджест с обзорами новинок,<br> длительными тест-драйвами, распаковками, а также акции,<br> спецпредложения и вот это вот всё.</p>
             </li>
             <li class="subscribe-block-form">
-              <form class="subscribe-form" method="get" action="https://echo.htmlacademy.ru"></form>
+              <form class="subscribe-form" method="get" action="https://echo.htmlacademy.ru">
                 <input class="subscribe-form-input" id="subscribe" type="submit" name="subscribe" placeholder="Ваш e-mail">
                 <button class="subscribe-form-btn" type="submit">Подписаться</button>
                 <label class="navigation-form-label" for="subscribe"></label>
@@ -301,7 +303,7 @@
       </div>
       <div class="page-footer-info">
         <div class="page-footer-address">
-          <adress>Санкт-Петербург, набережная реки Карповки, 5, литера П.</adress>
+          <p><adress>Санкт-Петербург, набережная реки Карповки, 5, литера П.</adress></p>
         </div>
         <div class="page-footer-services">
           <a class="page-footer-services-delivery" href="#">Доставка</a>
