--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <li class="main-goods-item">
               <a class="main-goods-item-link" href="#">
                 <div class="main-goods-item-vr">
-                  <img class="main-goods-vr" src="#" alt="Очки VR" width="" height="">
+                  <img class="main-goods-vr" src="/images/Vector.svg" alt="Очки VR" width="" height="">
                 </div>
                 <p class="main-goods-item-name">Виртуальная реальность</p>
               </a>
