--- a/catalog.html
+++ b/catalog.html
@@ -7,8 +7,8 @@
   <body>
     <div class="container">
       <header class="page-header">
-        <div class="page-header__logo">
-          <a><img src="#" alt="DEVICE" width="" height=""></a>
+        <div class="page-header-logo">
+          <a><img src="images/header/device.svg" alt="DEVICE" width="145" height="36"></a>
         </div>
         <nav class="navigation">
           <ul class="navigation-user">
@@ -180,7 +180,7 @@
           </section>
           <section class="goods-list">
             <article class="goods-item">
-              <img class="goods-item-img" src="#" alt="Любительская селфи-палка" width="360" height="380">
+              <img class="goods-item-img" src="images/selfy-1.jpg" alt="Любительская селфи-палка" width="360" height="380">
               <div class="goods-item-hover">
                 <a class="btn" href="#">В корзину</a>
                 <a class="goods-item-add" href="#">Добавить к сравнению</a>
@@ -191,7 +191,7 @@
               </div>
             </article>
             <article class="goods-item">
-              <img class="goods-item-img" src="#" alt="Профессиональная селфи-палка" width="360" height="380">
+              <img class="goods-item-img" src="images/selfy-2.jpg" alt="Профессиональная селфи-палка" width="360" height="380">
               <div class="goods-item-hover">
                 <a class="btn" href="#">В корзину</a>
                 <a class="goods-item-add" href="#">Добавить к сравнению</a>
@@ -202,7 +202,7 @@
               </div>
             </article>
             <article class="goods-item">
-              <img class="goods-item-img" src="#" alt="Непотопляемая селфи-палка" width="360" height="380">
+              <img class="goods-item-img" src="images/selfy-3.jpg" alt="Непотопляемая селфи-палка" width="360" height="380">
               <div class="goods-item-hover">
                 <a class="btn" href="#">В корзину</a>
                 <a class="goods-item-add" href="#">Добавить к сравнению</a>
@@ -213,7 +213,7 @@
               </div>
             </article>
             <article class="goods-item">
-              <img class="goods-item-img" src="#" alt="Селфи-палка «Следуй за мной»" width="360" height="380">
+              <img class="goods-item-img" src="images/selfy-4.jpg" alt="Селфи-палка «Следуй за мной»" width="360" height="380">
               <div class="goods-item-hover">
                 <a class="btn" href="#">В корзину</a>
                 <a class="goods-item-add" href="#">Добавить к сравнению</a>
@@ -250,7 +250,7 @@
     </main>
       <footer class="page-footer">
         <div class="page-footer-logo">
-          <a><img src="#" alt="DEVICE" width="" height=""></a>
+          <a><img src="images/logo.svg" alt="DEVICE" width="145" height="36"></a>
         </div>
         <div class="page-footer-info">
           <div class="page-footer-address">
@@ -285,7 +285,7 @@
               </li>
             </ul>
             <div class="page-footer-copyright">
-              <a href="#"><img src="#" alt="HTML Academy" width="" height=""></a>
+              <a><img src="images/logo-2.svg" alt="HTML Academy" width="115" height="33"></a>
             </div>
             <div class="rectangle">
               <svg>
