--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <body>
     <div class="container">
       <header class="page-header">
-        <div class="page-header__logo">
-          <a><img src="#" alt="DEVICE" width="" height=""></a>
+        <div class="page-header-logo">
+          <a><img src="images/header/device.svg" alt="DEVICE" width="145" height="36"></a>
         </div>
         <nav class="navigation">
           <ul class="navigation-user">
@@ -75,7 +75,7 @@
           <input class="promo-slider-input" id="promo-control-3" type="radio" name="promo-control">
           <div class="promo-slider-item-1">
             <div class="promo-slider-img-1">
-              <img src="#" alt="Квадрокоптер" width="" height="">
+              <img src="images/slider-1.png" alt="Квадрокоптер" width="560" height="560">
             </div>
             <div class="promo-slider-text-1">
               <b>Порхает как бабочка, жалит как пчела!</b>
@@ -89,7 +89,7 @@
           </div>
           <div class="promo-slider-item-2">
             <div class="promo-slider-img-2">
-              <img src="#" alt="Фитнес-браслет" width="" height="">
+              <img src="images/slider-2.png" alt="Фитнес-браслет" width="560" height="560">
             </div>
             <div class="promo-slider-text-2">
               <b>Худеем<br>правильно!</b>
@@ -102,7 +102,7 @@
           </div>
           <div class="promo-slider-item-3">
             <div class="promo-slider-img-3">
-              <img src="#" alt="Самая длинная палка для селфи" width="" height="">
+              <img src="images/slider-3.png" alt="Самая длинная палка для селфи" width="560" height="560">
             </div>
             <div class="promo-slider-text-3">
               <b>Делай селфи,<br>как Бен Стиллер!</b>
@@ -133,7 +133,7 @@
             <li class="main-goods-item">
               <a class="main-goods-item-link" href="#">
                 <div class="main-goods-item-vr">
-                  <img class="main-goods-vr" src="/images/Vector.svg" alt="Очки VR" width="" height="">
+                  <img class="main-goods-vr" src="images/main-goods-list/vr.svg" alt="Очки VR" width="97" height="55">
                 </div>
                 <p class="main-goods-item-name">Виртуальная реальность</p>
               </a>
@@ -141,7 +141,7 @@
             <li class="main-goods-item">
               <a class="main-goods-item-link" href="#">
                 <div class="main-goods-item-selfie">
-                  <img class="main-goods-selfie" src="#" alt="Монопод" width="" height="">
+                  <img class="main-goods-selfie" src="images/main-goods-list/monopod.svg" alt="Монопод" width="86" height="117">
                 </div>
                 <p class="main-goods-item-name">Моноподы для селфи</p>
               </a>
@@ -149,7 +149,7 @@
             <li class="main-goods-item">
               <a class="main-goods-item-link" href="#">
                 <div class="main-goods-item-cam">
-                  <img class="main-goods-cam" src="#" alt="Экшн-камера" width="" height="">
+                  <img class="main-goods-cam" src="images/main-goods-list/actioncam.svg" alt="Экшн-камера" width="71" height="87">
                 </div>
                 <p class="main-goods-item-name">Экшн-камеры</p>
               </a>
@@ -157,7 +157,7 @@
             <li class="main-goods-item">
               <a class="main-goods-item-link" href="#">
                 <div class="main-goods-item-fit">
-                  <img class="main-goods-fit" src="#" alt="Фитнес-браслет" width="" height="">
+                  <img class="main-goods-fit" src="images/main-goods-list/fitnes.svg" alt="Фитнес-браслет" width="107" height="65">
                 </div>
                 <p class="main-goods-item-name">Фитнес-браслеты</p>
               </a>
@@ -165,7 +165,7 @@
             <li class="main-goods-item">
               <a class="main-goods-item-link" href="#">
                 <div class="main-goods-item-watch">
-                  <img class="main-goods-watch" src="#" alt="Умные часы" width="" height="">
+                  <img class="main-goods-watch" src="images/main-goods-list/watch.svg" alt="Умные часы" width="56" height="98">
                 </div>
                 <p class="main-goods-item-name">Умные часы</p>
               </a>
@@ -173,7 +173,7 @@
             <li class="main-goods-item">
               <a class="main-goods-item-link" href="#">
                 <div class="main-goods-item-copter">
-                  <img class="main-goods-copter" src="#" alt="Квадрокоптер" width="" height="">
+                  <img class="main-goods-copter" src="images/main-goods-list/copter.svg" alt="Квадрокоптер" width="132" height="69">
                 </div>
                 <p class="main-goods-item-name">Квадрокоптеры</p>
               </a>
@@ -185,26 +185,29 @@
         <div class="container">
           <div class="services-slider-wrap">
             <h2 class="visually-hidden">Наши сервисы</h2>
-            <input class="services-slider__input  visually-hidden" id="services-control-1" type="radio" name="services-control" checked>
-            <input class="services-slider__input  visually-hidden" id="services-control-2" type="radio" name="services-control">
-            <input class="services-slider__input  visually-hidden" id="services-control-3" type="radio" name="services-control">
-            <div class="services-slider__item  services-slider__item--active  services-slider__item--delivery">
+            <input class="services-slider-input  visually-hidden" id="services-control-1" type="radio" name="services-control" checked>
+            <input class="services-slider-input  visually-hidden" id="services-control-2" type="radio" name="services-control">
+            <input class="services-slider-input  visually-hidden" id="services-control-3" type="radio" name="services-control">
+            <div class="services-slider-item-delivery">
               <h3>Доставка</h3>
               <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
+              <img class="service-one" src="images/services/dilivery.svg" alt="курьер" width="136" height="164">
             </div>
-            <div class="services-slider__item  services-slider__item--warranty">
+            <div class="services-slider-item-warranty">
               <h3>Гарантия</h3>
               <p>Если из-за возгорания купленного у нас товара у вас сгорит дом &mdash; не переживайте, мы выдадим вам новый.<br>Товар, не дом, конечно же.</p>
+              <img class="service-two" src="images/services/warranty.svg" alt="гарантия" width="171" height="195">
             </div>
-            <div class="services-slider__item  services-slider__item--credit">
+            <div class="services-slider-item-credit">
               <h3>Кредит</h3>
               <p>Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для нашего банка, разумеется.</p>
+              <img class="service-three" src="images/services/credit.svg" alt="кредит" width="156" height="188">
             </div>
 
-            <div class="services-slider__controls">
-              <label class="services-slider__control  services-slider__control--active" for="services-control-1">Доставка</label>
-              <label class="services-slider__control" for="services-control-2">Гарантия</label>
-              <label class="services-slider__control" for="services-control-3">Кредит</label>
+            <div class="services-slider-controls">
+              <label class="services-slider-control  services-slider-control-active" for="services-control-1">Доставка</label>
+              <label class="services-slider-control" for="services-control-2">Гарантия</label>
+              <label class="services-slider-control" for="services-control-3">Кредит</label>
             </div>
           </div>
         </div>
@@ -213,7 +216,7 @@
         <div class="delivery-order">
           <ul class="delivery-bar">
             <li class="delivery-bar-pic">
-              <img class="visually-hidden" src="#" alt="Доставка" width="" height="">
+              <img class="visually-hidden" src="images/car.svg" alt="Доставка" width="47" height="31">
             </li>
             <li class="delivery-bar-text">
               <span>Доставим редкий товар под заказ</span>
@@ -300,7 +303,7 @@
     </main>
     <footer class="page-footer">
       <div class="page-footer-logo">
-        <a><img src="#" alt="DEVICE" width="" height=""></a>
+        <a><img src="images/logo.svg" alt="DEVICE" width="145" height="36"></a>
       </div>
       <div class="page-footer-info">
         <div class="page-footer-address">
@@ -335,7 +338,7 @@
             </li>
           </ul>
           <div class="page-footer-copyright">
-            <a href="#"><img src="#" alt="HTML Academy" width="" height=""></a>
+            <a href="#"><img src="images/logo-2.svg" alt="HTML Academy" width="115" height="33"></a>
           </div>
           <div class="rectangle">
             <svg>
